fixed hero align

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -541,7 +541,7 @@ h6 {
 # Sections General
 --------------------------------------------------------------*/
 section {
-  padding: 60px 0;
+  padding: 150px 0;
   overflow: hidden;
 }
 
